--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
       </div>
       <div class="wether_sec d-flex justify-content-center align-items-center flex-column">
         <img src="./images/clouds.png" alt="" class="image">
-        <h1 class="temp"></h1>
-        <h3 class="city"></h3>
+        <h1 class="temp">22</h1>
+        <div> <span class="city text-white Poppins fs-3">mumbai</span> <span class="text-white Poppins fs-3">/</span><span class="region text-white Poppins fs-3"> maharashtra</span></div>
       </div>
       <div class="other_details pt-5 d-flex justify-content-around">
-        <div class="humiDity d-flex" >
+        <div class="humiDity d-flex justify-content-center align-items-center" >
          <div> <img src="./images/humidity.png" alt=""></div>
-         <div class="px-2">
-          <h2 class="humidity"></h2>
-          <h3>humidity</h3>
+         <div class="px-2 ">
+          <h2 class="humidity">12</h2>
+          <h3 class="text-white Poppins">Humidity</h3>
          </div>
         </div>
-        <div class="windSpeed d-flex" >
+        <div class="windSpeed d-flex justify-content-center align-items-center" >
           <div><img src="./images/wind.png" alt=""></div>
          <div class="px-2">
-          <h2 class="wind_speed"></h2>
-          <h3>wind</h3>
+          <h2 class="wind_speed">6</h2>
+          <h3 class="text-white Poppins">Wind</h3>
          </div>
         </div>
       </div>
